# ctorch

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  build.zig  build.zig.zon
csrc/: torch_api.cpp
include/: torch_api.h  torch_api_generated.cpp.h  torch_api_generated.h
src/: .clang-format
